--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,7 @@ body{
     background: url(../img/intro-bg.jpg) no-repeat center;
     background-size: cover;
     padding-top: 263px;
+    padding-bottom: 223px;
 }
 
 .intro__title{
@@ -636,6 +637,10 @@ outline-offset: 0;
 
 /* Places styles start */
 
+.places{
+    margin-bottom: 131px;
+}
+
 .places__caption{
     display: flex;
     flex-wrap: wrap;
@@ -669,11 +674,17 @@ outline-offset: 0;
 
 .places__card{
     position: relative;
+    overflow: hidden;
+}
+
+.places__card:hover .places__card-pic{
+    transform: scale(1.05);
+
 }
 
 .places__card::after{
     display: block;
-    content: "";
+    content: '';
     width: 100%;
     height: 100%;
     background-color: rgba(21, 24, 36, 0.4);
@@ -697,9 +708,32 @@ outline-offset: 0;
     grid-column: span 3;
 }
 
+.places__card-size_sm{
+    grid-column: span 2;
+}
+
 .places__card-pic{
     width: 100%;
-    width: 354px;
+    transition: 0.15s;
+}
+
+.places__card-pic_size_lg{
+    height: 354px;
     object-fit: cover;
 }
+
+.places__card-pic_size_sm{
+    height: 283px;
+    object-fit: cover;
+}
+
+.places__card-link{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+}
+
 /* Places styles end */
