--- a/css/style.css
+++ b/css/style.css
@@ -878,4 +878,25 @@ outline-offset: 0;
 }
 /* Top places styles end */
 
-/* start */
+/* Videos styles start */
+.videos{
+    width: 100%;
+}
+
+.videos__wrapper{
+    max-width: 1440px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.video__item{
+    padding-top: 56.25%;
+}
+
+.video__element{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
