--- a/css/style.css
+++ b/css/style.css
@@ -364,9 +364,9 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+/* RESET STYLES END */
 
-
-
+/* Font start */
 /* lato-regular - latin */
 @font-face {
     font-family: 'Lato';
@@ -394,6 +394,9 @@ textarea {
          url('../fonts/lato-v17-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/lato-v17-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+/* Fonts end */
+
+
 
 html{
     box-sizing: border-box;
@@ -426,7 +429,7 @@ img{
 .wrapper-full{
     max-width: 1262px;
     margin: 0 auto;
-
+    padding: 0 15px;
 }
 
 .section-title{
@@ -448,6 +451,7 @@ img{
     left: 0;
 }
 
+/* Header styles start */
 .header{
     position: fixed;
     top: 0;
@@ -494,6 +498,38 @@ img{
     opacity: 0.75;
 }
 
+.header__burger{
+    display: none;
+    width: 40px;
+    height: 28px;
+    position: relative;
+}
+
+.burger__line{
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    left: 0;
+}
+
+.burger__line_first{
+    top: 0;
+}
+
+.burger__line_second{
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.burger__line_third{
+    bottom: 0;
+}
+/* Header styles end */
+
+
+/* Intro style start */
 .intro{
     height: 100vh;
     background: url(../img/intro-bg.jpg) no-repeat center;
@@ -563,12 +599,10 @@ img{
 outline: 0;
 outline-offset: 0;
 }
-
 /* Intro style end */
 
 
 /* Benefits styles start */
-
 .benefits{
     margin-bottom: 131px;
 }
@@ -646,7 +680,6 @@ outline-offset: 0;
 
 
 /* Places styles start */
-
 .places{
     margin-bottom: 131px;
 }
@@ -748,7 +781,6 @@ outline-offset: 0;
 /* Places styles end */
 
 /* Tours styles start */
-
 .tours{
     margin-bottom: 139px;
 }
@@ -945,3 +977,60 @@ outline-offset: 0;
     opacity: .75;
 }
 /* Footer styles end */
+
+/* Media start */
+
+@media screen and (max-width: 767px) {
+    .header__burger {
+        display: block;
+    }
+    .header__nav{
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: black;
+        z-index: 10;
+        padding: 75px;
+        transform: translateX(100%);
+
+    }
+    .header__item{
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .header__item:last-child{
+        margin-bottom: 0;
+    }
+    .header__link{
+        font-size: 42px;
+        line-height: 48px;
+    }
+    .header__nav-close{
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 11;
+    }
+    .header__nav-close-line{
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        position: absolute;
+        top: 50%;
+    }
+    .header__nav-close-line:first-child{
+        transform: translateY(-50%) rotate(45deg);
+
+    }
+    .header__nav-close-line:last-child{
+        transform: translateY(-50%) rotate(-45deg);
+
+    }
+}
+/* Media end */
