Adaptive Tablet added

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/
+/* 111111http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
 */
@@ -401,13 +401,12 @@ textarea {
 html{
     box-sizing: border-box;
 }
-
 *, *::before, *::after{
     box-sizing: inherit;
 }
 
 body{
-    font-family: Lato;
+    font-family: 'Lato';
     font-style: normal;
     font-size: 16px;
     line-height: 1.2;
@@ -462,7 +461,7 @@ img{
     z-index: 999;
 }
 
-.header__active{
+.header_active{
     background: #0E1D28;
 }
 
@@ -478,7 +477,6 @@ img{
     display: flex;
     flex-wrap: wrap;
 }
-
 .header__item{
     margin-right: 82px;
 }
@@ -494,7 +492,7 @@ img{
     text-decoration: none;
 }
 
-.header_link:hover, .header_link:focus, .header_link:active{
+.header__link:hover, .header__link:focus, .header__link:active{
     opacity: 0.75;
 }
 
@@ -834,7 +832,7 @@ outline-offset: 0;
 
 .top__cards{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     column-gap: 57px;
     row-gap: 57px;
 }
@@ -847,6 +845,7 @@ outline-offset: 0;
 .top__card{
     display: flex;
     flex-direction: column;
+    grid-column: span 2;
 }
 
 .top__card-stats{
@@ -979,6 +978,66 @@ outline-offset: 0;
 /* Footer styles end */
 
 /* Media start */
+
+@media screen and (max-width: 960px) {
+    .benefits{
+        margin-bottom: 75px;
+    }
+    .benefits__card{
+        margin-bottom: 20px;
+    }
+    .search-form__field{
+        margin-bottom: 25px;
+    }
+    .benefits__cards{
+        padding: 0 15px;
+        column-gap: 35px;
+    }
+    .benefits__title{
+        padding: 55px 15px;
+    }
+    .benefits__wrap{
+        box-shadow: none;
+    }
+    .places__card-size_lg{
+        grid-column: span 6;
+    }
+    .places__card-size_sm {
+        grid-column: span 6;
+    }
+    .tours__tour{
+        column-gap: 35px;
+    }
+    .tour__info{
+        padding-left: 0px;
+    }
+    .tour__title{
+        margin-bottom: 15px;
+    }
+    .tour__desc{
+        margin-bottom: 15px;
+    }
+    .top__cards{
+        column-gap: 25px;
+        row-gap: 55px;
+    }
+    .top__card{
+        grid-column: span 3;
+    }
+    .top__card-thumb{
+        width: 100%;
+    }
+    .top__card-pic {
+        margin-bottom: 15px;
+    }
+    .footer{
+        padding: 60px 0;
+    }
+}
+    
+
+
+
 
 @media screen and (max-width: 767px) {
     .header__burger {
