--- a/css/style.css
+++ b/css/style.css
@@ -1034,14 +1034,13 @@ outline-offset: 0;
         padding: 60px 0;
     }
 }
-    
-
-
-
 
 @media screen and (max-width: 767px) {
     .header__burger {
         display: block;
+    }
+    .header__wrapper{
+        padding-top: 28px;
     }
     .header__nav{
         width: 100%;
@@ -1088,11 +1087,54 @@ outline-offset: 0;
     }
     .header__nav-close-line:first-child{
         transform: translateY(-50%) rotate(45deg);
-
     }
     .header__nav-close-line:last-child{
         transform: translateY(-50%) rotate(-45deg);
+    }
+    .intro__title{
+        font-size: 32px;
+        line-height: 48px;
+    }
+    .intro__subtitle{
+        font-size: 14px;
+        margin-bottom:20px;
+    }
+    .intro{
+        padding-top: 125px;
+    }
+    .search-form__field{
+        width: 100%;
+        margin-right: 0;
+        padding-bottom: 12px;
+        background: transparent url(../img/svg/circle-icon.svg) no-repeat left 2px;
+    }
+    .search-form__field::placeholder{
+        font-size: 16px;
+    }
+    .search-form__submit{
+        width: 100%;
+    }
+    .benefits{
+        margin-bottom: 36px;
+    }
+    .benefits__card{
+        grid-column: span 3;
+        margin-bottom: 40px;
+    }
+    .benefits__card-pic{
+        margin-bottom: 20px;
+    }
+    .benefits__card-title{
+        margin-bottom: 12px;
+    }
+    .benefits__card-desc{
+        margin-bottom: 12px;
+    }
+}
 
+@media screen and (max-width: 500px){
+    .header__nav{
+        padding: 75px 30px;
     }
 }
 /* Media end */
