--- a/css/style.css
+++ b/css/style.css
@@ -537,19 +537,19 @@ img{
 }
 
 .intro__title{
+    max-width: 619px;
     font-weight: 500;
     font-size: 50px;
     line-height: 60px;
     color: white;
-    max-width: 619px;
     margin-bottom: 22px;
 }
 
 .intro__subtitle{
+    max-width: 546px;
+    color: white;
     font-size: 16px;
     line-height: 24px;
-    color: white;
-    max-width: 546px;
     margin-bottom: 59px;
 }
 
@@ -1036,6 +1036,12 @@ outline-offset: 0;
 }
 
 @media screen and (max-width: 767px) {
+    .section-title{
+        margin-bottom: 25px;
+    }
+    .section-title::after{
+        width: 78px;
+    }
     .header__burger {
         display: block;
     }
@@ -1096,7 +1102,7 @@ outline-offset: 0;
         line-height: 48px;
     }
     .intro__subtitle{
-        font-size: 14px;
+        font-size: 16px;
         margin-bottom:20px;
     }
     .intro{
@@ -1129,6 +1135,53 @@ outline-offset: 0;
     }
     .benefits__card-desc{
         margin-bottom: 12px;
+    }
+    .places{
+        margin-bottom: 76px;
+    }
+    .places__card-size_lg, .places__card-size_sm{
+        height: 230px;
+    }
+    .places__view-all{
+        margin-bottom: 25px;
+    } 
+    .places__caption{
+        margin-bottom: 0;
+    } 
+    .tours{
+        margin-bottom: 76px;
+    }
+    .tour__pic, .tour__info{
+        grid-column: span 2;
+    }
+    .tour__pic{
+        margin-bottom: 12px;
+    }
+    .tour__pic_mob-first{
+        grid-row-start: -1;
+    }
+    .tours__tour{
+        margin-bottom: 50px;
+    }
+    .top{
+        margin-bottom: 76px;
+    }
+    .top__card{
+        grid-column: span 6;
+    }
+    .top__card-desc{
+        margin-bottom: 15px;
+    }
+    .footer__logo{
+        width: 100%;
+        margin-bottom: 24px;
+    }
+    .footer__nav{
+        width: 100%;
+    }
+    .footer__menu{
+        width: 50%;
+        margin-bottom: 24px;
     }
 }
 
